web app navigation and Log Analyics workspace template

--- a/webApp/Views/Shared/_Layout.cshtml
+++ b/webApp/Views/Shared/_Layout.cshtml
@@ -35,9 +35,6 @@
 
                         <div class="collapse navbar-collapse" id="navbar-collapse-x">
                             <ul class="nav navbar-nav navbar-right">
-                                <li>
-
-                                </li>
                                 <ul class="navbar-nav mr-auto">
                                     <li class="nav-item">
                                         @Html.ActionLink("Our story", "OurStory", "Home", null, new { @class = "nav-link" })
@@ -59,10 +56,8 @@
 
                 <div class="right_section col-md-5 col-xs-12">
                     <div class="search">
-                        <button type="submit"><i class="fa fa-search"></i></button> <input type="text" class="form-control" placeholder="Search">
+                        <button type="submit"><i placeholder="Search">
                     </div>
-
-
 
                     <nav class="navbar navbar-expand-lg navbar-light bg-light">
 
@@ -73,15 +68,6 @@
                                 <li class="nav-item">
                                     @Html.ActionLink("Our story", "OurStory", "Home", null, new { @class = "nav-link" })
                                     @*<a class="nav-link" href="our-story.html">Our story<span class="sr-only">(current)</span></a>*@
-                                </li>
-                                <li class="nav-item">
-                                    @Html.ActionLink("Brands", "Index", "Brands", null, new { @class = "nav-link" })
-                                </li>
-
-                                <li class="nav-item">
-                                    @Html.ActionLink("Robotics", "Robotics", "Home", null, new { @class = "nav-link" })
-                                    @*<a class="nav-link disabled" href="robotics.html">Robotics</a>*@
-                                </li>
 
                                 <li class="nav-item">
                                     @Html.ActionLink("Media", "Media", "Home", null, new { @class = "nav-link" })
