--- a/webApp/Views/Home/Media.cshtml
+++ b/webApp/Views/Home/Media.cshtml
@@ -3,17 +3,14 @@
 }
 
 <section class="banner">
-    <img src="~/images/banner3.png" />
+    <img src="~/images/cloudBanner.jpeg" />
     <div class="inner-content col-md-12">
-        <div class="container">
 
-            <h1>WATCH THIS VIDEO</h1>
-            <span>WE DO THINGS IN IT</span>
-
-            <p><span><i class="fa fa-play"></i></span>Click for inspiration at cosmic levels</p>
+        <h1>Upload your Media to the Cloud</h1>
 
 
-        </div>
+
+
     </div>
 </section>
 
@@ -29,8 +26,8 @@
 
                 </div>
 
-                <h3>Sic Transit Gloria Mundi</h3>
-                <p>At the deepest level of its core, technology embodies the circle of life. And from an old age Larry Shepard unlearned how to harness that circle and perpetuate it through more technology. I need more copy here. At the deepest level of its core, technology embodies the circle of life. And from an old age Larry Shepard unlearned how to harness that circle and perpetuate it through more technology. At the deepest level of its core, technology embodies the circle of life. </p>
+                <h3>Choose the files you would like to upload</h3>
+                <p>Browse from your system, the file you would like to upload. You can add additionall comments in the first field if desired. </p>
                 <div class="readtext">
                     <!--<a href="#"> Read More...</a>-->
                 </div>
@@ -95,7 +92,7 @@
         </div>
 </section>
 
-@Html.ActionLink("Manage Media", "Index", "Media")
+
 
 
 
