--- a/webApp/Views/Home/Index.cshtml
+++ b/webApp/Views/Home/Index.cshtml
@@ -1,5 +1,6 @@
 ﻿<section class="banner">
-    <img src="~/images/hero image.png" />
+    @*<img src="~/images/hero image.png" />*@
+    <img src="~/images/cloudBannerBackground.jpeg" />
     <div class="inner-content col-md-12">
         <div class="container jumboContainer">
             <div class=" col-md-8 middle">
@@ -8,15 +9,14 @@
                 <p>The new way of doing content Management</p>
             </div>
 
-            <div class="content-right col-md-4">
-                <h3>Cloud</h3><span>Based Solution</span>
-                <div class="text-center">
-                    <button type="button" class="btn btn-primary btn-lg">Manage your Media Now</button>
-                </div>
-                <p>
-                    Upload your files into a cloud based Blob Storage
-                </p>
+
+        </div>
+        <div class="content-right col-md-4">
+          <span class="text-left">Upload your files into a cloud based Blob Storage</span>
+            <div class="text-center">
+                <button type="button" class="btn btn-primary align-content-sm-center" class="text-white">@Html.ActionLink("Manage your Media Now", "Index", "Media")</button>
             </div>
+       
         </div>
     </div>
 </section>
