--- a/webApp/Views/Home/Media.cshtml
+++ b/webApp/Views/Home/Media.cshtml
@@ -27,14 +27,16 @@
                 </div>
 
                 <h3>Choose the files you would like to upload</h3>
-                <p>Browse from your system, the file you would like to upload. You can add additionall comments in the first field if desired. </p>
+                <p>Browse from your system, the file you would like to upload. You can add additionall comments in the first field if desired.</p>
+                @Html.ActionLink("Manage Media", "Index", "Media")
+
                 <div class="readtext">
                     <!--<a href="#"> Read More...</a>-->
                 </div>
             </div>
             <div class="col-xs-12 col-sm-4 col-md-4 adj_text">
 
-                <img CLASS="DESKTOP-IMG" src="~/images/girl.png" alt="Public" />
+                <img CLASS="DESKTOP-IMG" src="~/images/uptoCloud.jpg" alt="Public" />
 
             </div>
 
@@ -55,8 +57,8 @@
 
             <div class="col-xs-12 col-sm-8 col-md-8 adj_text">
 
-                <h3>Sic Transit Gloria Mundi</h3>
-                <p>At the deepest level of its core, technology embodies the circle of life. And from an old age Larry Shepard unlearned how to harness that circle and perpetuate it through more technology. I need more copy here. At the deepest level of its core, technology embodies the circle of life. And from an old age Larry Shepard unlearned how to harness that circle and perpetuate it through more technology. At the deepest level of its core, technology embodies the circle of life. </p>
+                <h3>View the Uploaded Files</h3>
+                <p>You can See the list and even open the files that has been already stored in the cloud </p>
                 <div class="readtext">
                     <!--<a href="#"> Read More...</a>-->
                 </div>
@@ -66,31 +68,6 @@
 
 
 
-<section class="sec_include1">
-    <div class="container">
-
-
-        <div class="row">
-            <div class="col-xs-12 col-sm-8 col-md-8 adj_text">
-                <div class="col-xs-12 col-sm-4 col-md-4 mobile-adj_text">
-
-                    <img src="~/images/sec3.jpg" alt="Public" />
-
-                </div>
-                <h3>Sic Transit Gloria Mundi</h3>
-                <p>At the deepest level of its core, technology embodies the circle of life. And from an old age Larry Shepard unlearned how to harness that circle and perpetuate it through more technology. I need more copy here. At the deepest level of its core, technology embodies the circle of life. And from an old age Larry Shepard unlearned how to harness that circle and perpetuate it through more technology. At the deepest level of its core, technology embodies the circle of life. </p>
-                <div class="readtext">
-                    <!-- <a href="#"> Read More...</a>-->
-                </div>
-            </div>
-
-            <div class="col-xs-12 col-sm-4 col-md-4 adj_text">
-
-                <img CLASS="DESKTOP-IMG" src="~/images/sec3.jpg" alt="Public" />
-
-            </div>
-        </div>
-</section>
 
 
 
