--- a/webApp/Views/Shared/_Layout.cshtml
+++ b/webApp/Views/Shared/_Layout.cshtml
@@ -15,6 +15,7 @@
 </head>
 
 <body>
+    
     <div id="wrapper">
 
         <header>
@@ -37,12 +38,12 @@
                             <ul class="nav navbar-nav navbar-right">
                                 <ul class="navbar-nav mr-auto">
                                     <li class="nav-item">
-                                        @Html.ActionLink("Our story", "OurStory", "Home", null, new { @class = "nav-link" })
+                                        @*@Html.ActionLink("Our story", "OurStory", "Home", null, new { @class = "nav-link" })*@
                                         @*<a class="nav-link" href="our-story.html">Our story<span class="sr-only">(current)</span></a>*@
                                     </li>
 
                                     <li class="nav-item">
-                                        @Html.ActionLink("Media", "Media", "Home", null, new { @class = "nav-link" })
+                                        @Html.ActionLink("How to Upload Media", "Media", "Home", null, new { @class = "nav-link" })
                                         @*<a class="nav-link disabled" href="media.html">Media</a>*@
                                     </li>
                                     <li class="nav-item">
@@ -66,11 +67,11 @@
                         <div class="collapse navbar-collapse" id="navbarSupportedContent">
                             <ul class="navbar-nav mr-auto">
                                 <li class="nav-item">
-                                    @Html.ActionLink("Our story", "OurStory", "Home", null, new { @class = "nav-link" })
+                                    @*@Html.ActionLink("Our story", "OurStory", "Home", null, new { @class = "nav-link" })*@
                                     @*<a class="nav-link" href="our-story.html">Our story<span class="sr-only">(current)</span></a>*@
 
                                 <li class="nav-item">
-                                    @Html.ActionLink("Media", "Media", "Home", null, new { @class = "nav-link" })
+                                    @Html.ActionLink("How to Upload Media", "Media", "Home", null, new { @class = "nav-link" })
                                     @*<a class="nav-link disabled" href="media.html">Media</a>*@
                                 </li>
                                 <li class="nav-item">
