--- a/webApp/Views/Home/Index.cshtml
+++ b/webApp/Views/Home/Index.cshtml
@@ -14,13 +14,11 @@
         <div class="content-right col-md-4">
           <span class="text-left">Upload your files into a cloud based Blob Storage</span>
             <div class="text-center">
-                <button type="button" class="btn btn-primary align-content-sm-center" class="text-white">@Html.ActionLink("Manage your Media Now", "Index", "Media")</button>
+                <button type="button" class="btn btn-primary btn-group-lg">@Html.ActionLink("Upload and view Images Now", "Index", "Media")</button>
             </div>
        
         </div>
     </div>
 </section>
 
-<section class="sec_include">
 
-</section>
